k8s/manifests/headlamp/headlamp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
---
kind: Service
apiVersion: v1
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ports:
    - port: 80
      targetPort: 4466
  selector:
    k8s-app: headlamp
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - namespace: default
      name: private-gateway
      sectionName: websecure
  hostnames:
    - headlamp.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: headlamp
  namespace: headlamp
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: headlamp
  template:
    metadata:
      labels:
        k8s-app: headlamp
    spec:
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:latest
          args:
            - "-in-cluster"
            - "-plugins-dir=/headlamp/plugins"
            - "-oidc-idp-issuer-url=https://authentik.o.cavnet.cloud/application/o/headlamp/"
            - "-oidc-client-id=r17iPmaiWFsmWYVd3lQ1gSlnzRtciKbmycBntNpN"
            - "-oidc-client-secret=REDACTED"
          ports:
            - containerPort: 4466
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 4466
            initialDelaySeconds: 30
            timeoutSeconds: 30
      nodeSelector:
        'kubernetes.io/os': linux
